<resources>
    <string name="app_name">GoStat</string>
    <string name="activity_label_view_frequency_table">View Frequency Table</string>
    <string name="activity_label_edit_list">Edit List</string>
    <string name="activity_label_view_all_lists">Your Lists</string>
    <string name="activity_label_view_list">View List</string>
    <string name="fragment_label_graph_histogram">Graph Histogram</string>
    <string name="activity_label_functions">Calculate Functions</string>
    <string name="hint_list_name">Enter a name for a list</string>
    <string name="hint_jump_to_amount">Enter an index number to jump to</string>
    <string name="hint_editable_data_point_value">Input and press enter</string>
    <string name="hint_bin_amount_specification">Specify a bin size</string>
    <string name="directions_create_data_source">You currently do not have a list, press the + icon
        on bottom right of screen to make one or select the menu for statistical functions. Lists allow
        you to make frequency tables, histograms and view 1-var-stats as well as naming and storing
        the data for further use. </string>
    <string name="directions_edit_list_title">Edit your lists here</string>
    <string name="directions_create_data_for_list">    
        To create new entries input a value into the last data row and press enter. When finished
        press the back button. All changes saved automatically.
    </string>
    <string name="directions_list_selection_and_functions"> 
        Select a list below to get functions for it. Create a list by pressing the + icon on the
        bottom right. </string>
    <string name="directions_input_bin_number">
        Please Input a bin number.
    </string>
    <string name="directions_create_data_for_editable_list">There is no data in this list. To create
        data for the list select edit list and hit Go!</string>
    <string name="directions_view_list_details_title">View and add your lists here</string>
    <string name="text_the_label_preview_of_list_for_list_details_activity">Preview</string>
    <string name="text_the_prefix_label_for_list_tags">Tags {</string>
    <string name="text_the_postfix_label_for_list_tags">}</string>
    <string name="text_label_for_user_input_for_calculations">Input</string>
    <string name="text_label_for_output_of_calculations">Output</string>
    <string name="list_tag_list_was_created_by_user">Created by user</string>
    <string name="list_tag_list_was_created_by_the_system">Created by system</string>
    <string name="list_tag_list_is_editable_by_the_user">Editable</string>
    <string name="list_tag_list_is_not_editable_by_the_user">Read Only</string>
    <string name="list_tag_list_is_not_dynamic_to_its_associated_list">Static</string>
    <string name="list_tag_lists_associated_id_is_pretext">Associated List ID</string>
    <string name="list_tag_the_id_pretext">List ID</string>
    <string name="list_tag_the_list_was_created_by_the_user">A user created list</string>
    <string name="list_tag_the_list_was_created_by_the_system">System created Frequency Table
    </string>
    <string name="title_vertical_axis_histograms">Frequency</string>
    <string name="title_horizontal_axis_histograms">Interval</string>
    <string name="title_postfix_for_histogram_graph"> Histogram</string>
    <string name="title_for_histogram_graphs">Histogram</string>
    <string name="title_alert_dialog_external_storage_permission_request">Permission Needed</string>
    <string name="text_alert_dialog_external_storage_permission_request">Permitting us access to external storage allows us to save the chart to your device.</string>
    <string name="title_prefix_of_new_frequency_table_list_names">~ Frequency Table for ID</string>
    <string name="error_no_data_to_compute_histogram">No Data for a Histogram/Table</string>
    <string name="error_bin_input_number_does_not_pass_validation">There was an error with the input
        for bin number.</string>
    <string name="button_label_share_histogram">Share</string>
    <string name="button_label_recommend_bin_number">Generate Bin Number</string>
    <string name="button_label_graph_a_histogram">Graph Histogram</string>
    <string name="button_label_execute_spinner_function">GO!</string>
    <string name="button_label_copy_to_clipboard">Copied To Clipboard</string>
    <string name="button_label_create_a_frequency_table">Create Frequency Table</string>
    <string name="toast_copy_to_clipboard_generic">Copied to Clipboard</string>
    <string name="toast_external_storage_denied">Permission Denied</string>
    <string name="toast_external_storage_never_ask_again">Never Asking Again</string>
    <string name="text_prefix_for_copy_to_clipboard_frequency_table">Frequency Table:</string>
    <string name="text_prefix_for_copy_to_clipboard_frequency_interval_line">Interval:</string>
    <string name="text_infix_for_copy_to_clipboard_frequency_amount_line"> Frequency:</string>
    <string name="text_prefix_for_copy_to_clipboard_summary_statistics">One Var Stats:</string>
    <string name="spinner_label_for_frequency_tables">Select Function</string>
    <string name="spinner_label_for_editable_lists">Select Function</string>
    <string name="spinner_label_for_function_selection">Select Function</string>
    <string name="text_data_point_disabled">Disabled DataPoint</string>
    <string name="text_label_the_column_represents_the_interval">Interval</string>
    <string name="text_label_the_column_represents_the_frequency_of_an_interval">Frequency</string>
    <string name="menu_label_upgrade">Upgrade Now</string>
    <string name="menu_label_functions">Functions</string>
    <string name="menu_view_list">View List</string>
    <string name="menu_delete_list">Delete List</string>
    <string name="text_the_title_label_for_one_var_stats">1-variable stats</string>
    <string name="text_the_label_for_representing_x_bar">x̅:</string>
    <string name="text_the_label_for_representing_summation_of_x">Σx:</string>
    <string name="text_the_label_for_representing_summation_of_x_squared">Σx²:</string>
    <string name="text_the_label_for_representing_sample_standard_deviation_of_x">Sx:</string>
    <string name="text_the_label_for_representing_standard_deviation_of_x">σx:</string>
    <string name="text_the_label_for_representing_the_number_of_items_of_x">n:</string>
    <string name="text_the_label_for_representing_the_minimum_of_x">Min X:</string>
    <string name="text_the_label_for_representing_the_quartile_one_of_the_data">Q1:</string>
    <string name="text_the_label_for_representing_the_median_of_the_data">Med X:</string>
    <string name="text_the_label_for_representing_the_quartile_three_of_the_data">Q3:</string>
    <string name="text_the_label_for_representing_the_maximum_of_x">Max X:</string>
    <string name="design_sample_point_index_when_editing_list">1</string>
    <string name="design_sample_interval_detail">(3,524] , (542, 653]</string>
    <string name="design_sample_of_frequency_detail_for_an_interval">15</string>
    <string name="design_sample_for_list_names">This is my List Name</string>
    <string name="design_sample_for_preview_of_a_list">1, 2, 5, 9, .35, 1</string>
    <string name="design_sample_for_list_id_tag">List ID 4</string>
    <string name="design_sample_for_list_id_when_selected">id 15</string>
    <string name="design_sample_for_editing_list_index_for_point">1</string>
    <string name="design_sample_for_editing_list_data_for_point">15.0357</string>
    <string name="meta_label_copy_to_clipboard_one_var_stats">1-var-stats GoStat</string>
    <string name="meta_label_copy_to_clipboard_frequency_table">Frequency Table</string>
    <string name="meta_label_data_points_fragment">Editable List</string>
    <string name="meta_label_frequency_table_fragment">Frequency Table</string>
    <string name="meta_label_for_histogram_fragment">Histogram Graph</string>
    <string name="meta_label_for_frequency_table_fragment">Frequency Table</string>
    <string name="meta_label_copy_to_clipboard_result">GoStat Result</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_label_generic_calculate">Calculate</string>
    <string name="button_label_copy_answer">Copy Answer</string>
    <string name="button_label_copy_all_output">Copy All Text</string>
    <string name="directions_error_on_edit_text_prob_over_100_percent">Input must be no greater than 1 with 1 being 100% and .35 being 35% ect.</string>
    <string name="directions_error_on_edit_text_decimal_format">invalid decimal format ex .1234</string>
    <string name="directions_error_generic_input_empty_and_errors">There are errors and blank input. All text boxes are required for calculation.
        For input errors you can get more information by clicking on the text box.</string>
    <string name="directions_error_generic_empty">There is an empty input. All text boxes are required for correct calculation.</string>
    <string name="directions_error_generic_input">There is an error on a text box. Please solve by reviewing the error message when clicking on the text box.</string>
    <string name="directions_error_generic_more_than_one_data_entry">This list needs to have more then one DataPoint before it can be calculated with a t-test.</string>
    <string name="directions_fill_out_required_inputs">Please fill out all required inputs for this calculation.</string>
    <string name="directions_error_create_a_list_for_calculation">Please create a new list by going to Lists in the menu. If you don\'t have sample data for a list for this calculation then go to T-Test Stats instead.</string>
    <string name="directions_warning_high_alpha">WARNING: An alpha higher then 10 is not very common. Please make sure alpha is correct.</string>
    <string name="directions_alpha_text_box_for_more_analysis">You can fill out alpha text box for more analysis.</string>
    <string name="directions_generic_fix_alpha_text_box_for_more_analysis">Fix alpha text box for more analysis.</string>
    <string name="test_label_generic_data_population_mean">Hypothesized Population Mean of Test (µ0)</string>
    <string name="label_for_generic_data_list_selection">Select a list</string>
    <string name="label_for_generic_data_alpha">Alpha (α) (optional)</string>
    <string name="label_for_generic_data_variance_type">Variance Type to Test (µ)</string>
    <string name="text_label_for_generic_hypothesized_mean">Hypothesized Population Mean of Test (µ0)</string>
    <string name="hint_generic_hypothesized_mean">Enter the hypothesized population mean of test</string>
    <string name="text_label_for_generic_mean_of_sample">Mean of Sample (x̅)</string>
    <string name="text_label_for_generic_sample_size_n">Sample Size (n)</string>
    <string name="text_label_for_generic_alpha">Alpha (α) (optional)</string>
    <string name="text_label_for_generic_variance_type">Variance Type to Test (µ)</string>
    <string name="hint_generic_data_population_mean">Enter the population mean</string>
    <string name="hint_generic_data_alpha">Enter alpha ex .05</string>
    <string name="text_generic_variance_equality">≠µ0 (has or does not have test)</string>
    <string name="text_generic_variance_less_than"><![CDATA[<µ0 (hypothesis is less than test)]]></string>
    <string name="text_generic_variance_variance_more_than"><![CDATA[>µ0 (hypothesis is more than test)]]></string>
    <string name="hint_generic_mean_of_sample">Enter the mean of sample</string>
    <string name="hint_generic_sample_size">Enter the sample size</string>
    <string name="hint_generic_alpha">Enter alpha ex .05</string>
    <string name="text_label_for_ztest_standard_deviation">Standard Deviation (σ)</string>
    <string name="hint_ztest_standard_deviation">Enter the standard deviation</string>
</resources>