<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/content_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/input_container_for_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                android:id="@+id/input_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:contentPadding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/hypothesized_value_text_view"
                        style="@style/DefaultTextViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_label_generic_data_population_mean"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/hypothesized_value_edit_text"
                        style="@style/DefaultEditTextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_generic_data_population_mean"
                        android:inputType="numberDecimal|numberSigned"
                        android:imeOptions="actionNext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hypothesized_value_text_view"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/select_list_text_view"
                        style="@style/DefaultTextViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_for_generic_data_list_selection"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hypothesized_value_edit_text" />

                    <Spinner
                        android:id="@+id/select_list_spinner"
                        style="@style/DefaultSpinnerThemeWithMargin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/select_list_text_view" />

                    <TextView
                        android:id="@+id/alpha_text_view"
                        style="@style/DefaultTextViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_for_generic_data_alpha"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/select_list_spinner" />

                    <EditText
                        android:id="@+id/alpha_edit_text"
                        style="@style/DefaultEditTextTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_generic_data_alpha"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionNext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/alpha_text_view"
                        android:importantForAutofill="no" />


                    <TextView
                        android:id="@+id/variances_text_view"
                        style="@style/DefaultTextViewLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_for_generic_data_variance_type"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/alpha_edit_text" />

                    <RadioGroup
                        android:id="@+id/variances_radio_group"
                        style="@style/DefaultRadioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/variances_text_view"
                        android:checkedButton="@id/variances_equality_radio_button">

                        <RadioButton
                            android:id="@+id/variances_equality_radio_button"
                            style="@style/DefaultRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_generic_variance_equality" />

                        <RadioButton
                            android:id="@+id/variances_less_than_radio_button"
                            style="@style/DefaultRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_generic_variance_less_than" />

                        <RadioButton
                            android:id="@+id/variances_more_than_radio_button"
                            style="@style/DefaultRadioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_generic_variance_variance_more_than" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/calculate_button"
                        style="@style/DefaultContentButtonTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_label_generic_calculate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/variances_radio_group" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <include layout="@layout/content_generic_output_tests"
            android:id="@+id/generic_output_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_container_for_padding"/>

        <include layout="@layout/content_generic_error_tests"
            android:id="@+id/generic_error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_container_for_padding"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>